# Cargo.toml
[package]
name = "rust_data_loader"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_data_loader"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.19", features = ["extension-module"] }
tokio = { version = "1", features = ["full"] }
crossbeam = "0.8"
rayon = "1.7"
opencv = { version = "0.83", features = ["opencv-4"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
rand = "0.8"

[build-dependencies]
pyo3-build-config = "0.19"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
